# ForexBotBackup

./: .replit  ai_optimizer.py  auto_backup.py  backtester.py  data_handler.py  download_project.py  ml_predictor.py  pyproject.toml  replit.nix  run_telegram_bot.py  setup_telegram.py  telegram_bot.py  trade_executor.py  trading_bot.py  trading_strategy.py  utils.py
